[pycodestyle]
max-line-length = 120

[pydocstyle]
convention = google
add-ignore = D205

[mypy]
ignore_missing_imports = True

[metadata]
name=comcrawl
version=2.0.0
url=https://github.com/whr778/comcrawl
author=whroe
author_email='whroe@uwe.nsa.gov, djguder@uwe.nsa.gov, djhritz@uwe.nsa.gov'
classifiers=
    Programming Language :: Python :: 3
    Operating System :: OS Independent
description=Fork of michael harms comcrawl (currently not being supported)
long_description= file: README.md
long_description_content_type=text/markdown

[options]
python_requires=>=3.9
include_package_data = True
packages=find:

[options.package_data]
* = *.yaml
